<?xml version="1.0" encoding="utf-8"?>
<fragment xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_recipes"
    android:name="ua.yurezcv.bakingapp.ui.recipes.RecipesGridFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
</fragment>