<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="ua.yurezcv.bakingapp.recipes.RecipeFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.recipes.RecipesGridFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_recipes"
        android:name=".movies.MoviesFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:visibility="invisible"
        tools:context=".movies.MoviesFragment"
        tools:listitem="@layout/fragment_recipe" />

    <ProgressBar
        android:id="@+id/pb_loading_indicator"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tv_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible" />

</FrameLayout>